[package]
name = "uf2l"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
goblin = "0.5"
clap = {version = "3", features = ["derive"]}
anyhow = "1"
zerocopy = "0.6"
byteorder = "1.4"
sysinfo = {version = "0.23", optional = true}

[build-dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[features]
default = ["flash-cmd"]
flash-cmd = ["sysinfo"]
